# vlasov-poisson

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: run_tests.yml
1D-1D/: 01_Two_Stream_Vlasov-Poisson-solver-KL.ipynb  01_Two_Stream_Vlasov-Poisson-solver-opt.ipynb  02_Bump_on_Tail_Vlasov-Poisson-solver-opt.ipynb  Results_view.ipynb  VP_landscape_search.ipynb
1D-1D/Utils/: utils.py
1D-1D/VP_solver/: auxiliary_functions.py  jax_vp_solver.py
1D-1D/examples/: 01_Two_Stream_Vlasov-Poisson-solver-opt.ipynb  02_Bump_on_Tail_Vlasov-Poisson-solver-opt.ipynb
1D-1D/vp_solver/: utils.py
examples/: 01_Two_Stream_Vlasov-Poisson-solver-opt.ipynb  02_Bump_on_Tail_Vlasov-Poisson-solver-opt.ipynb
notebooks/: 1D_1D_Two_Stream_landscape_search.ipynb  Two-stram-landscape-Jax.ipynb  Two-stream-landscape-Jax.ipynb  Two-stream-landscape.ipynb  Two_Stream_KL_landscape_search.ipynb  Two_Stream_Semi_Lagrangian_forward.ipynb  VP-2D2D-solver-draft.ipynb  VP-2D2D-solver.ipynb  Vlasov-Poisson-solver-jax.ipynb  Vlasov-Poisson-solver-opt.ipynb  Vlasov-Poisson-solver-particle-jax.ipynb  bilinear_interpolation  bispline interpolation
notebooks/VP_solver/: jax_vp_solver.py
tests/: jax_vp_test.py
vp_solver/: jax_vp_solver.py  utils.py
vp_solver/src/: jax_vp_solver.py  utils.py
