[project]
name = "vp_solver"
version = "0.1.0"
description = "Solver for the 1D-1D Vlasov-Poisson using a semi-Lagrangian scheme."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Martin Guerra", email = "mguerra4@wisc.edu" },
  { name = "Yukun Yue", email = "yyue24@wisc.edu"},
  { name = "Leonardo Zepeda-Núñez", email = "lzepedanunez@google.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research"
]
keywords = [
  "plasma physics", "jax", "Vlasov-Poisson"
]
dependencies = [
  "jupyter",
  "matplotlib",
  "numpy",
  "jax",
  "optax"
]

[project.urls]
homepage = "https://github.com/maguerrap/vlasov-poisson"
repository = "https://github.com/maguerrap/vlasov-poisson"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-xdist",
  "pylint>=2.6.0",
  "pyink",
  "ipykernel"
]

[tool.pyink]
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [
  "**/*_test.py"
]
